tests/kyverno-policies/add-role/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip-webservice
  namespace: webservice
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-deployment
  namespace: paas
spec: {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset
  namespace: paas
spec: {}
---
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: paas-replicaset
  namespace: paas
spec: {}
---
apiVersion: v1
kind: Job
metadata:
  name: paas-job
  namespace: paas
spec: {}
---
apiVersion: v1
kind: Service
metadata:
  name: paas-service
  namespace: paas
spec: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-ingress
  namespace: paas
spec: {}
