tests/kyverno-policies/add-role/test-paas-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-deployment
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
  template:
    metadata:
      labels:
        osc.edu/role: paas
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
  template:
    metadata:
      labels:
        osc.edu/role: paas
---
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: paas-replicaset
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
  template:
    metadata:
      labels:
        osc.edu/role: paas
---
apiVersion: v1
kind: Job
metadata:
  name: paas-job
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
  template:
    metadata:
      labels:
        osc.edu/role: paas
---
apiVersion: v1
kind: Service
metadata:
  name: paas-service
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-ingress
  namespace: paas
  labels:
    osc.edu/role: paas
spec:
