tests/kyverno-policies/add-role/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-role
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-role
    rule: paas-add-role-pod
    resources:
      - test-paas
    patchedResources: test-paas-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-role
    rule: paas-add-role-all
    resources:
      - paas-deployment
    patchedResources: test-paas-mutated.yaml
    kind: Deployment
    result: pass
  - policy: add-role
    rule: paas-add-role-all
    resources:
      - paas-statefulset
    patchedResources: test-paas-mutated.yaml
    kind: StatefulSet
    result: pass
  - policy: add-role
    rule: paas-add-role-all
    resources:
      - paas-replicaset
    patchedResources: test-paas-mutated.yaml
    kind: ReplicaSet
    result: pass
  - policy: add-role
    rule: paas-add-role-all
    resources:
      - paas-job
    patchedResources: test-paas-mutated.yaml
    kind: Job
    result: pass
  - policy: add-role
    rule: paas-add-role-all
    resources:
      - paas-service
    patchedResources: test-paas-mutated.yaml
    kind: Service
    result: pass
  - policy: add-role
    rule: paas-add-role-all
    resources:
      - paas-ingress
    patchedResources: test-paas-mutated.yaml
    kind: Ingress
    result: pass
  - policy: add-role
    rule: paas-add-role-pod
    resources:
      - test-skip
      - test-skip-webservice
    kind: Pod
    result: skip
